ghc-4335c07/testsuite/tests/typecheck/should_fail/T13075.hs
{-# LANGUAGE BangPatterns #-}

module Main where

!(Just x) = Nothing

main = putStrLn "hi there!"
